Bug 11598 - testcase gcc.dg/20020118-1.c fails runtime check of __attribute__((aligned(16)))
Summary: testcase gcc.dg/20020118-1.c fails runtime check of __attribute__((aligned(16)))
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 3.3.1
: P2 normal
Target Milestone: 3.3.3
Assignee: Franz Sirl
URL:
Keywords: patch, wrong-code
Depends on:
Blocks:
 
Reported: 2003-07-19 23:29 UTC by dank
Modified: 2003-10-28 20:35 UTC (History)
1 user (show)

See Also:
Host: i686-pc-linux-gnu
Target: powerpc-*-linux-gnu
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2003-07-20 02:29:45


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dank 2003-07-19 23:29:20 UTC
I built gcc-ss-3_3-20030714 as a crosscompiler for ppc405 and ppc750
using http://kegel.com/crosstool.  Both failed test with messages:

Executed ./20020118-1.exe, status 1
Aborted
Exec failed, errorCode: NONE
FAIL: gcc.dg/20020118-1.c execution test 

It looks like this has been happening since gcc-3.1; see
http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00770.html

It looks like this was failing in the 3.4 branch as of 20030525; see
http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01727.html
Comment 1 Andrew Pinski 2003-07-20 02:29:45 UTC
I can confirm this fails on the mainline (20030719).  With -mabi=altivec, the test does not 
fail.
Comment 2 Franz Sirl 2003-07-20 08:41:08 UTC
I have a patch for this using PREFERRED_STACK_BOUNDARY which I've postponed 
until after 3.3.1 is out, as it's only a minor bug. 
 
Comment 3 Andrew Pinski 2003-10-26 22:35:48 UTC
patch: <http://gcc.gnu.org/ml/gcc-patches/2003-10/msg02351.html>.
Comment 4 GCC Commits 2003-10-28 19:46:48 UTC
Subject: Bug 11598

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	sirl@gcc.gnu.org	2003-10-28 19:46:46

Modified files:
	gcc/config/rs6000: sysv4.h 
	gcc            : ChangeLog 

Log message:
	2003-10-28  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
	
	PR target/11598
	PR libgcj/10610
	* config/rs6000/sysv4.h (PREFERRED_STACK_BOUNDARY): New macro.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/rs6000/sysv4.h.diff?cvsroot=gcc&r1=1.139&r2=1.140
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.1579&r2=2.1580

Comment 5 GCC Commits 2003-10-28 19:56:07 UTC
Subject: Bug 11598

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-3_3-branch
Changes by:	sirl@gcc.gnu.org	2003-10-28 19:55:56

Modified files:
	gcc/config/rs6000: sysv4.h 
	gcc            : ChangeLog 

Log message:
	2003-10-28  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
	
	PR target/11598
	PR libgcj/10610
	* config/rs6000/sysv4.h (PREFERRED_STACK_BOUNDARY): New macro.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/rs6000/sysv4.h.diff?cvsroot=gcc&only_with_tag=gcc-3_3-branch&r1=1.113.4.4&r2=1.113.4.5
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_3-branch&r1=1.16114.2.791&r2=1.16114.2.792

Comment 6 Franz Sirl 2003-10-28 20:35:53 UTC
Fixed for 3.3.3 and 3.4.