re PR target/11598 (testcase gcc.dg/20020118-1.c fails runtime check of __attribute__((aligned(16))))

2003-10-28  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	PR target/11598
	PR libgcj/10610
	* config/rs6000/sysv4.h (PREFERRED_STACK_BOUNDARY): New macro.

From-SVN: r73018